# RustyNote

./: Cargo.toml  README.md  index.html
.github/workflows/: gh-pages-deploy.yml
resources/: controls.scss  line_counter.scss  mobile.scss  scrollbar.scss  style.scss  theme.scss  toggle.scss  tooltip.scss  utility.scss
resources/bulma/sass/components/: tabs.scss
resources/fontawesome/css/: all.css  all.min.css  brands.css  brands.min.css  v4-font-face.css  v4-font-face.min.css  v5-font-face.css  v5-font-face.min.css
src/: lib.rs  main.rs
src/api/: download.rs  local_storage.rs  mod.rs  parser.rs
src/api/markdown_formatter/: mod.rs  shortcuts.rs  textarea.rs
src/api/markdown_formatter/format/: block_prefix.rs  codeblock.rs  heading.rs  horizontal_rule.rs  inline.rs  mod.rs  ordered_list.rs  table.rs
src/api/markdown_formatter/handler/: enter.rs  mod.rs
src/components/: button.rs  confirmation.rs  dialect.rs  dropdown.rs  icons.rs  logo.rs  mobile.rs  mod.rs  select.rs  tabs.rs  theme.rs  toggle.rs  tooltip.rs
src/components/button/: copy.rs  delete.rs  download.rs  format_tables.rs  mod.rs
src/components/doc/: commonmark.rs  gfm.rs  mod.rs  modal.rs  rustynote.rs
src/page/: editor.rs  editor_old.rs  header.rs  mod.rs
src/page/controls/: mobile_controls.rs  mod.rs
src/page/controls/components/: clear_button.rs  copy_button.rs  download_button.rs  edit_text_buttons.rs  format_tables_button.rs  mod.rs
src/page/editor/: mod.rs  read_section.rs  write_section.rs
src/page/header/: logo.rs  mod.rs  mode_switcher.rs  settings.rs
(+8 files in other folders)
