[package]
name = "markdown"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.11.0", features = ["timers", "dialogs"] }
leptos = { version = "0.8.10", features = ["csr"] }
leptoaster = "0.2.3"
leptos-use = { version = "0.16.3", features = ["on_click_outside", "use_clipboard", "use_event_listener"] }
markdown-table-formatter = "0.3.0"
comrak = { version = "0.43.0", features = ["syntect"] }
regex = "1.12.2"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
web-sys = { version = "0.3.81", features = ["Window", "Document", "Blob", "Url", "HtmlAnchorElement", "Navigator"] }
console_error_panic_hook = "0.1.7"
